sdk/support/arm-support/samples/v3/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                                                         | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| --------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [chatTranscriptsGetSample.js][chattranscriptsgetsample]                                                               | Returns chatTranscript details for a support ticket under a subscription. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetchatTranscriptDetailsForSubscriptionSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [chatTranscriptsListSample.js][chattranscriptslistsample]                                                             | Lists all chat transcripts for a support ticket under subscription x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/ListChatTranscriptsForSubscriptionSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [chatTranscriptsNoSubscriptionGetSample.js][chattranscriptsnosubscriptiongetsample]                                   | Returns chatTranscript details for a no subscription support ticket. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetchatTranscriptDetailsForSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [chatTranscriptsNoSubscriptionListSample.js][chattranscriptsnosubscriptionlistsample]                                 | Lists all chat transcripts for a support ticket x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/ListChatTranscriptsForSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [communicationsCheckNameAvailabilitySample.js][communicationschecknameavailabilitysample]                             | Check the availability of a resource name. This API should be used to check the uniqueness of the name for adding a new communication to the support ticket. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CheckNameAvailabilityForSupportTicketCommunication.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [communicationsCreateSample.js][communicationscreatesample]                                                           | Adds a new customer communication to an Azure support ticket. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CreateSupportTicketCommunication.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [communicationsGetSample.js][communicationsgetsample]                                                                 | Returns communication details for a support ticket. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetCommunicationDetailsForSubscriptionSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [communicationsListSample.js][communicationslistsample]                                                               | Lists all communications (attachments not included) for a support ticket. <br/></br> You can also filter support ticket communications by _CreatedDate_ or _CommunicationType_ using the $filter parameter. The only type of communication supported today is _Web_. Output will be a paged result with _nextLink_, using which you can retrieve the next set of Communication results. <br/><br/>Support ticket data is available for 18 months after ticket creation. If a ticket was created more than 18 months ago, a request for data might cause an error. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/ListCommunicationsForSubscriptionSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [communicationsNoSubscriptionCheckNameAvailabilitySample.js][communicationsnosubscriptionchecknameavailabilitysample] | Check the availability of a resource name. This API should be used to check the uniqueness of the name for adding a new communication to the support ticket. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CheckNameAvailabilityForNoSubscriptionSupportTicketCommunication.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [communicationsNoSubscriptionCreateSample.js][communicationsnosubscriptioncreatesample]                               | Adds a new customer communication to an Azure support ticket. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CreateNoSubscriptionSupportTicketCommunication.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [communicationsNoSubscriptionGetSample.js][communicationsnosubscriptiongetsample]                                     | Returns communication details for a support ticket. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetCommunicationDetailsForSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [communicationsNoSubscriptionListSample.js][communicationsnosubscriptionlistsample]                                   | Lists all communications (attachments not included) for a support ticket. <br/></br> You can also filter support ticket communications by _CreatedDate_ or _CommunicationType_ using the $filter parameter. The only type of communication supported today is _Web_. Output will be a paged result with _nextLink_, using which you can retrieve the next set of Communication results. <br/><br/>Support ticket data is available for 18 months after ticket creation. If a ticket was created more than 18 months ago, a request for data might cause an error. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/ListCommunicationsForSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [fileWorkspacesCreateSample.js][fileworkspacescreatesample]                                                           | Creates a new file workspace for the specified subscription. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CreateFileWorkspaceForSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [fileWorkspacesGetSample.js][fileworkspacesgetsample]                                                                 | Gets details for a specific file workspace in an Azure subscription. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetFileWorkspaceDetailsForSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [fileWorkspacesNoSubscriptionCreateSample.js][fileworkspacesnosubscriptioncreatesample]                               | Creates a new file workspace. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CreateFileWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [fileWorkspacesNoSubscriptionGetSample.js][fileworkspacesnosubscriptiongetsample]                                     | Gets details for a specific file workspace. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetFileWorkspaceDetails.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [filesCreateSample.js][filescreatesample]                                                                             | Creates a new file under a workspace for the specified subscription. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CreateFileForSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [filesGetSample.js][filesgetsample]                                                                                   | Returns details of a specific file in a work space. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetFileDetailsForSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [filesListSample.js][fileslistsample]                                                                                 | Lists all the Files information under a workspace for an Azure subscription. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/ListFilesForSubscriptionUnderFileWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [filesNoSubscriptionCreateSample.js][filesnosubscriptioncreatesample]                                                 | Creates a new file under a workspace. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CreateFile.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [filesNoSubscriptionGetSample.js][filesnosubscriptiongetsample]                                                       | Returns details of a specific file in a work space. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetFileDetails.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [filesNoSubscriptionListSample.js][filesnosubscriptionlistsample]                                                     | Lists all the Files information under a workspace for an Azure subscription. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/ListFilesUnderFileWorkspace.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [filesNoSubscriptionUploadSample.js][filesnosubscriptionuploadsample]                                                 | This API allows you to upload content to a file x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/UploadFile.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [filesUploadSample.js][filesuploadsample]                                                                             | This API allows you to upload content to a file x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/UploadFileForSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [operationsListSample.js][operationslistsample]                                                                       | This lists all the available Microsoft Support REST API operations. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/ListOperations.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [problemClassificationsGetSample.js][problemclassificationsgetsample]                                                 | Get problem classification details for a specific Azure service. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetProblemClassification.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [problemClassificationsListSample.js][problemclassificationslistsample]                                               | Lists all the problem classifications (categories) available for a specific Azure service. Always use the service and problem classifications obtained programmatically. This practice ensures that you always have the most recent set of service and problem classification Ids. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/ListProblemClassifications.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [servicesGetSample.js][servicesgetsample]                                                                             | Gets a specific Azure service for support ticket creation. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetService.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [servicesListSample.js][serviceslistsample]                                                                           | Lists all the Azure services available for support ticket creation. For **Technical** issues, select the Service Id that maps to the Azure service/product as displayed in the **Services** drop-down list on the Azure portal's [New support request](https://portal.azure.com/#blade/Microsoft_Azure_Support/HelpAndSupportBlade/overview) page. Always use the service and its corresponding problem classification(s) obtained programmatically for support ticket creation. This practice ensures that you always have the most recent set of service and problem classification Ids. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/ListServices.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [supportTicketsCheckNameAvailabilitySample.js][supportticketschecknameavailabilitysample]                             | Check the availability of a resource name. This API should be used to check the uniqueness of the name for support ticket creation for the selected subscription. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CheckNameAvailabilityWithSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [supportTicketsCreateSample.js][supportticketscreatesample]                                                           | Creates a new support ticket for Subscription and Service limits (Quota), Technical, Billing, and Subscription Management issues for the specified subscription. Learn the [prerequisites](https://aka.ms/supportAPI) required to create a support ticket.<br/><br/>Always call the Services and ProblemClassifications API to get the most recent set of services and problem categories required for support ticket creation.<br/><br/>Adding attachments is not currently supported via the API. To add a file to an existing support ticket, visit the [Manage support ticket](https://portal.azure.com/#blade/Microsoft_Azure_Support/HelpAndSupportBlade/managesupportrequest) page in the Azure portal, select the support ticket, and use the file upload control to add a new file.<br/><br/>Providing consent to share diagnostic information with Azure support is currently not supported via the API. The Azure support engineer working on your ticket will reach out to you for consent if your issue requires gathering diagnostic information from your Azure resources.<br/><br/>**Creating a support ticket for on-behalf-of**: Include _x-ms-authorization-auxiliary_ header to provide an auxiliary token as per [documentation](https://learn.microsoft.com/azure/azure-resource-manager/management/authenticate-multi-tenant). The primary token will be from the tenant for whom a support ticket is being raised against the subscription, i.e. Cloud solution provider (CSP) customer tenant. The auxiliary token will be from the Cloud solution provider (CSP) partner tenant. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CreateBillingSupportTicketForSubscription.json |
| [supportTicketsGetSample.js][supportticketsgetsample]                                                                 | Get ticket details for an Azure subscription. Support ticket data is available for 18 months after ticket creation. If a ticket was created more than 18 months ago, a request for data might cause an error. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetSubscriptionSupportTicketDetails.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [supportTicketsListSample.js][supportticketslistsample]                                                               | Lists all the support tickets for an Azure subscription. You can also filter the support tickets by _Status_, _CreatedDate_, _ServiceId_, and _ProblemClassificationId_ using the $filter parameter. Output will be a paged result with _nextLink_, using which you can retrieve the next set of support tickets. <br/><br/>Support ticket data is available for 18 months after ticket creation. If a ticket was created more than 18 months ago, a request for data might cause an error. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/ListSupportTicketsCreatedOnOrAfterAndInOpenStateBySubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [supportTicketsNoSubscriptionCheckNameAvailabilitySample.js][supportticketsnosubscriptionchecknameavailabilitysample] | Check the availability of a resource name. This API should be used to check the uniqueness of the name for support ticket creation for the selected subscription. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CheckNameAvailability.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| [supportTicketsNoSubscriptionCreateSample.js][supportticketsnosubscriptioncreatesample]                               | Creates a new support ticket for Billing, and Subscription Management issues. Learn the [prerequisites](https://aka.ms/supportAPI) required to create a support ticket.<br/><br/>Always call the Services and ProblemClassifications API to get the most recent set of services and problem categories required for support ticket creation.<br/><br/>Adding attachments is not currently supported via the API. To add a file to an existing support ticket, visit the [Manage support ticket](https://portal.azure.com/#blade/Microsoft_Azure_Support/HelpAndSupportBlade/managesupportrequest) page in the Azure portal, select the support ticket, and use the file upload control to add a new file.<br/><br/>Providing consent to share diagnostic information with Azure support is currently not supported via the API. The Azure support engineer working on your ticket will reach out to you for consent if your issue requires gathering diagnostic information from your Azure resources.<br/><br/> x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/CreateBillingSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [supportTicketsNoSubscriptionGetSample.js][supportticketsnosubscriptiongetsample]                                     | Gets details for a specific support ticket. Support ticket data is available for 18 months after ticket creation. If a ticket was created more than 18 months ago, a request for data might cause an error. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/GetSupportTicketDetails.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [supportTicketsNoSubscriptionListSample.js][supportticketsnosubscriptionlistsample]                                   | Lists all the support tickets. <br/><br/>You can also filter the support tickets by <i>Status</i>, <i>CreatedDate</i>, , <i>ServiceId</i>, and <i>ProblemClassificationId</i> using the $filter parameter. Output will be a paged result with <i>nextLink</i>, using which you can retrieve the next set of support tickets. <br/><br/>Support ticket data is available for 18 months after ticket creation. If a ticket was created more than 18 months ago, a request for data might cause an error. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/ListSupportTickets.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [supportTicketsNoSubscriptionUpdateSample.js][supportticketsnosubscriptionupdatesample]                               | This API allows you to update the severity level, ticket status, and your contact information in the support ticket.<br/><br/>Note: The severity levels cannot be changed if a support ticket is actively being worked upon by an Azure support engineer. In such a case, contact your support engineer to request severity update by adding a new communication using the Communications API. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/UpdateAdvancedDiagnosticConsentOfSupportTicket.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [supportTicketsUpdateSample.js][supportticketsupdatesample]                                                           | This API allows you to update the severity level, ticket status, advanced diagnostic consent and your contact information in the support ticket.<br/><br/>Note: The severity levels cannot be changed if a support ticket is actively being worked upon by an Azure support engineer. In such a case, contact your support engineer to request severity update by adding a new communication using the Communications API. x-ms-original-file: specification/support/resource-manager/Microsoft.Support/stable/2024-04-01/examples/UpdateAdvancedDiagnosticConsentOfSupportTicketForSubscription.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node chatTranscriptsGetSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx dev-tool run vendored cross-env SUPPORT_SUBSCRIPTION_ID="<support subscription id>" node chatTranscriptsGetSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[chattranscriptsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/chatTranscriptsGetSample.js
[chattranscriptslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/chatTranscriptsListSample.js
[chattranscriptsnosubscriptiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/chatTranscriptsNoSubscriptionGetSample.js
[chattranscriptsnosubscriptionlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/chatTranscriptsNoSubscriptionListSample.js
[communicationschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/communicationsCheckNameAvailabilitySample.js
[communicationscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/communicationsCreateSample.js
[communicationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/communicationsGetSample.js
[communicationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/communicationsListSample.js
[communicationsnosubscriptionchecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/communicationsNoSubscriptionCheckNameAvailabilitySample.js
[communicationsnosubscriptioncreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/communicationsNoSubscriptionCreateSample.js
[communicationsnosubscriptiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/communicationsNoSubscriptionGetSample.js
[communicationsnosubscriptionlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/communicationsNoSubscriptionListSample.js
[fileworkspacescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/fileWorkspacesCreateSample.js
[fileworkspacesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/fileWorkspacesGetSample.js
[fileworkspacesnosubscriptioncreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/fileWorkspacesNoSubscriptionCreateSample.js
[fileworkspacesnosubscriptiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/fileWorkspacesNoSubscriptionGetSample.js
[filescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/filesCreateSample.js
[filesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/filesGetSample.js
[fileslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/filesListSample.js
[filesnosubscriptioncreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/filesNoSubscriptionCreateSample.js
[filesnosubscriptiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/filesNoSubscriptionGetSample.js
[filesnosubscriptionlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/filesNoSubscriptionListSample.js
[filesnosubscriptionuploadsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/filesNoSubscriptionUploadSample.js
[filesuploadsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/filesUploadSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/operationsListSample.js
[problemclassificationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/problemClassificationsGetSample.js
[problemclassificationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/problemClassificationsListSample.js
[servicesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/servicesGetSample.js
[serviceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/servicesListSample.js
[supportticketschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/supportTicketsCheckNameAvailabilitySample.js
[supportticketscreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/supportTicketsCreateSample.js
[supportticketsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/supportTicketsGetSample.js
[supportticketslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/supportTicketsListSample.js
[supportticketsnosubscriptionchecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/supportTicketsNoSubscriptionCheckNameAvailabilitySample.js
[supportticketsnosubscriptioncreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/supportTicketsNoSubscriptionCreateSample.js
[supportticketsnosubscriptiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/supportTicketsNoSubscriptionGetSample.js
[supportticketsnosubscriptionlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/supportTicketsNoSubscriptionListSample.js
[supportticketsnosubscriptionupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/supportTicketsNoSubscriptionUpdateSample.js
[supportticketsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/support/arm-support/samples/v3/javascript/supportTicketsUpdateSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-support?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/support/arm-support/README.md
